--- a/web/frontend/src/components/navbar/menu.css
+++ b/web/frontend/src/components/navbar/menu.css
@@ -18,7 +18,7 @@
 	stroke: black;
 	stroke-linecap: round;
 	stroke-linejoin: round;
-	stroke-width: 3;
+	strokeWidth: 3;
 	transition: 
 	  stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
 	  stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1),
