--- a/web/frontend/src/index.css
+++ b/web/frontend/src/index.css
@@ -15,4 +15,9 @@
   .swiper-pagination-bullet-active {
     background-color: rgb(255, 255, 255); /* Change the active bullet color (optional) */
   }
+  .image-gallery-container .image-gallery-image {
+    object-fit: cover; /* Ensures the image covers the container */
+    width: 100%; /* Makes the image take full width of the container */
+    height: 400px; /* Adjust to desired height */
+  }
   
